// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for a branch 1`] = `
<Fragment>
  <div
    className="display-flex-center flex-0 small"
  >
    <span
      className="header-meta-warnings"
    >
      <ComponentNavWarnings
        componentKey="my-project"
        isBranch={true}
        onWarningDismiss={[MockFunction]}
        warnings={
          Array [
            Object {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_1",
            },
            Object {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_2",
            },
          ]
        }
      />
    </span>
    <span
      className="spacer-left nowrap note"
      title="overview.project.last_analysis.date_time.2017-01-02T00:00:00.000Z"
    >
      2017-01-02T00:00:00.000Z
    </span>
    <span
      className="spacer-left nowrap note"
    >
      version 0.0.1
    </span>
    <withCurrentUserContext(HomePageSelect)
      className="spacer-left"
      currentPage={
        Object {
          "branch": "branch-6.7",
          "component": "my-project",
          "type": "PROJECT",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly for a main project branch 1`] = `
<Fragment>
  <div
    className="display-flex-center flex-0 small"
  >
    <span
      className="header-meta-warnings"
    >
      <ComponentNavWarnings
        componentKey="my-project"
        isBranch={true}
        onWarningDismiss={[MockFunction]}
        warnings={
          Array [
            Object {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_1",
            },
            Object {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_2",
            },
          ]
        }
      />
    </span>
    <span
      className="spacer-left nowrap note"
      title="overview.project.last_analysis.date_time.2017-01-02T00:00:00.000Z"
    >
      2017-01-02T00:00:00.000Z
    </span>
    <span
      className="spacer-left nowrap note"
    >
      version 0.0.1
    </span>
    <withCurrentUserContext(HomePageSelect)
      className="spacer-left"
      currentPage={
        Object {
          "branch": undefined,
          "component": "my-project",
          "type": "PROJECT",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly for a portfolio 1`] = `
<Fragment>
  <div
    className="display-flex-center flex-0 small"
  >
    <span
      className="header-meta-warnings"
    >
      <ComponentNavWarnings
        componentKey="foo"
        isBranch={true}
        onWarningDismiss={[MockFunction]}
        warnings={
          Array [
            Object {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_1",
            },
            Object {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_2",
            },
          ]
        }
      />
    </span>
    <withCurrentUserContext(HomePageSelect)
      className="spacer-left"
      currentPage={
        Object {
          "component": "foo",
          "type": "PORTFOLIO",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly for a pull request 1`] = `
<Fragment>
  <div
    className="display-flex-center flex-0 small"
  >
    <span
      className="header-meta-warnings"
    >
      <ComponentNavWarnings
        componentKey="my-project"
        isBranch={false}
        onWarningDismiss={[MockFunction]}
        warnings={
          Array [
            Object {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_1",
            },
            Object {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_2",
            },
          ]
        }
      />
    </span>
    <span
      className="spacer-left nowrap note"
      title="overview.project.last_analysis.date_time.2017-01-02T00:00:00.000Z"
    >
      2017-01-02T00:00:00.000Z
    </span>
  </div>
  <div
    className="navbar-context-meta-secondary display-inline-flex-center"
  >
    <a
      className="display-inline-flex-center big-spacer-right"
      href="https://example.com/pull/1234"
      rel="noopener noreferrer"
      target="_blank"
    >
      branches.see_the_pr
      <DetachIcon
        className="little-spacer-left"
        size={12}
      />
    </a>
    <withBranchStatus(BranchStatus)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
          "url": "https://example.com/pull/1234",
        }
      }
      component={
        Object {
          "analysisDate": "2017-01-02T00:00:00.000Z",
          "breadcrumbs": Array [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": Object {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": Array [
            Object {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": Array [],
          "version": "0.0.1",
        }
      }
    />
  </div>
</Fragment>
`;
